# ebpfdbg

./: .gitignore  .gitmodules  Cargo.toml  README.md
ebpfdbg/: Cargo.toml  build.rs
ebpfdbg-common/: Cargo.toml
ebpfdbg-common/src/: lib.rs
ebpfdbg-ebpf/: Cargo.toml
ebpfdbg-ebpf/src/: lib.rs  main.rs  vmlinux.rs
ebpfdbg/src/: arch.rs  debugger.rs  ebpf.rs  lib.rs  main.rs  proc.rs  util.rs
ebpfdbg/src/debugger/: auxv.rs  base_ops.rs  breakpoints.rs  catch_syscalls.rs  exec_file.rs  extended_mode.rs  host_io.rs  section_offsets.rs  target.rs
ebpfdbg/tests/: debugger.rs
testdata/: Makefile  anti-ptrace  anti-ptrace.c  bench_loop.py  bench_loop_syscall.py  fork  fork.c  loop  loop.c  loop_syscall  loop_syscall.c  multithread  multithread.c  prog1  prog1.c  testprog  testprog.c
