[package]
name = "ebpfdbg-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
ebpfdbg-common = { path = "../ebpfdbg-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "ebpfdbg"
path = "src/main.rs"
